JWT authentication with tokenization